--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/notification.css" id="theme">
-  <title>мои уведомления</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_package/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_package/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_package/favicon-16x16.png">
+  <link rel="manifest" href="./img/favicon_package/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="./css/notification.css">
+  <title>Мои уведомления</title>
 </head>
 
 <body>
 
   <div class="notification">
     <div class="notification__header">
-      <img class="theme-icon" src="../img/night.svg" alt="night">
-      <h2>мои уведомления</h2>
+      <img src="./img/logo.svg" alt="Logo">
+      <h1>мои уведомления</h1>
     </div>
     <hr class="header__hr">
     <div class="notification__info"></div>
@@ -33,7 +39,7 @@
     <h3>Дизайн и разработка: <a href="https://github.com/vladpantyukhin" target="_blank">Влад Пантюхин</a></h3>
   </div>
 
-  <script src="../js/notification.js"></script>
+  <script src="./js/notification.js"></script>
 </body>
 
 </html>
