--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="manifest" href="./img/favicon_package/site.webmanifest">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="./css/sweetalert2.css">
   <link rel="stylesheet" href="./css/notification.css">
   <title>Мои уведомления</title>
 </head>
@@ -39,6 +40,7 @@
     <h3>Дизайн и разработка: <a href="https://github.com/vladpantyukhin" target="_blank">Влад Пантюхин</a></h3>
   </div>
 
+  <script src="./js/sweetalert2.js"></script>
   <script src="./js/notification.js"></script>
 </body>
 
