--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +13,7 @@
   <link rel="stylesheet" href="./css/notification.css">
   <title>Мои уведомления</title>
 </head>
-
 <body>
-
   <div class="notification">
     <div class="notification__header">
       <img src="./img/logo.svg" alt="Logo">
@@ -39,9 +36,7 @@
   <div class="footer">
     <h3>Дизайн и разработка: <a href="https://github.com/vladpantyukhin" target="_blank">Влад Пантюхин</a></h3>
   </div>
-
   <script src="./js/sweetalert2.js"></script>
   <script src="./js/notification.js"></script>
 </body>
-
 </html>
