--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="./css/sweetalert2.css">
   <link rel="stylesheet" href="./css/notification.css">
-  <title>Мои уведомления</title>
+  <title>Мои задачи</title>
 </head>
 <body>
   <div class="notification">
     <div class="notification__header">
       <img src="./img/logo.svg" alt="Logo">
-      <h1>мои уведомления</h1>
+      <h1>мои задачи</h1>
     </div>
     <hr class="header__hr">
     <div class="notification__info"></div>
@@ -28,7 +28,7 @@
       <button>Добавить</button>
     </div>
     <div class="notification__list">
-      <h3>Список уведомлений</h3>
+      <h3>Список задач</h3>
       <div></div>
       <button>Очистить список</button>
     </div>
@@ -37,6 +37,6 @@
     <h3>Дизайн и разработка: <a href="https://github.com/vladpantyukhin" target="_blank">Влад Пантюхин</a></h3>
   </div>
   <script src="./js/sweetalert2.js"></script>
-  <script src="./js/notification.js"></script>
+  <script src="./js/tasks.js"></script>
 </body>
 </html>
