--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="notification__form">
       <h5>Выберите время</h5>
       <input type="time">
-      <textarea placeholder="Введите текст уведомления" maxlength="100"></textarea>
+      <textarea placeholder="Введите текст задачи" maxlength="100"></textarea>
       <button>Добавить</button>
     </div>
     <div class="notification__list">
